# elegantmotd

./: .dockerignore  .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml
.github/workflows/.github/workflows/: build.yml
src/elegantmotd/: motd.py  sysinfo.py  temperature.py
