[project]
name = "elegantmotd"
version = "1.0.0"
description = "A visually appealing and informative Message of the Day (MOTD) generator for Linux systems."
authors = [{ name = "emerick-biron" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = ["motd", "system", "information", "console", "dashboard"]
dependencies = [
    "rich>=13.9.4,<14",
    "psutil>=6.1.1,<7",
    "art~=6.4",
    "rich-click>=1.8.5,<2",
    "distro>=1.9.0,<2",
]

[project.urls]
Homepage = "https://github.com/emerick-biron/elegantmotd"
Repository = "https://github.com/emerick-biron/elegantmotd.git"

[project.scripts]
elegantmotd = "elegantmotd.motd:display"

[tool.hatch.build.targets.sdist]
include = ["src/elegantmotd"]

[tool.hatch.build.targets.wheel]
include = ["src/elegantmotd"]

[tool.hatch.build.targets.wheel.sources]
"src/elegantmotd" = "elegantmotd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
